Fix the stats scrollbar

--- a/src/app/home/activities/stats/stats.component.css
+++ b/src/app/home/activities/stats/stats.component.css
@@ -1,5 +1,5 @@
 .container {
-    margin: 0 2ch 0 2ch;
+    padding: 0 2ch 0 2ch;
     display: flex;
     flex-direction: column;
     align-items: center;
